[tool.poetry]
name = "budgetschmudget"
version = "0.1.0"
description = ""
authors = ["reeleese <leereese3@gmail.com>"]
license = "GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
